--- a/mstech_mclaren/views/fleet_vehicle.xml
+++ b/mstech_mclaren/views/fleet_vehicle.xml
@@ -14,7 +14,7 @@
                 </xpath>
 		<xpath expr="//group[6]" position="before">
 			<group string="Poliza y Seguro">
-				<field name="insurance_company"/>
+				<field name="insurance_company" domain="[('category_id','=','Seguros')]"/>
 				<field name="policy_number"/>
 				<field name="policy_expiration"/>
 				<field name="policy_amount" widget="monetary"/>
