--- a/mstech_mclaren/views/fleet_vehicle.xml
+++ b/mstech_mclaren/views/fleet_vehicle.xml
@@ -27,7 +27,7 @@
 	    	<xpath expr="//group[3]" position="inside">
 			<field name="model_type"  />
 			<field name="traction"  />
-			<field name="up_holstery"  />
+			<field name="upholstery"  />
 			<field name="equipment"  />
 		</xpath>
             </data>
