--- a/mstech_mclaren/views/fleet_vehicle.xml
+++ b/mstech_mclaren/views/fleet_vehicle.xml
@@ -28,7 +28,7 @@
 			<field name="model_type"/>
 			<field name="traction"/>
 			<field name="upholstery"/>
-			<field name="equipment" widget="many2many_tags" options="{'no_create_edit': True}"/>
+		<!--	<field name="equipment" widget="many2many_tags" options="{'no_create_edit': True}"/>	-->
 		</xpath>
             </data>
             </field>
