--- a/mstech_mclaren/views/res_partner.xml
+++ b/mstech_mclaren/views/res_partner.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
             <data>
-                <xpath expr="//label[@name='l10n_latam_identification_type_id']" position="attributes">
+                <xpath expr="//label[@for='l10n_latam_identification_type_id']" position="attributes">
 					<attribute name="string">Documento Gaaaaa</attribute>
                 </xpath>
             </data>
