--- a/mstech_mclaren/views/res_partner.xml
+++ b/mstech_mclaren/views/res_partner.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
             <data>
-                <xpath expr="//label[@string='Número de Identificación']" position="attributes">
+                <xpath expr="//label[1]" position="attributes">
 					<attribute name="string">Documento Gaaaaa</attribute>
                 </xpath>
             </data>
