--- a/mstech_mclaren/views/crm_lead.xml
+++ b/mstech_mclaren/views/crm_lead.xml
@@ -4,10 +4,10 @@
         <record id="crm_lead_mstech1" model="ir.ui.view">
             <field name="name">crm.lead.mstech1</field>
             <field name="model">crm.lead</field>
-            <field name="inherit_id" ref="mstech_sixt_prev.crm_lead_view_form"/>
+            <field name="inherit_id" ref="crm.crm_lead_view_form"/>
             <field name="arch" type="xml">
             <data>
-                <xpath expr="//group[@name='alquiler_group_2']" position="after">
+                <xpath expr="//field[@name='tag_ids']" position="after">
                     <group name="rent_data_basic" string="Datos Basicos">
                         <field name="pickup_place"/>
                         <field name="pickup_date"/>
