--- a/mstech_mclaren/views/crm_lead.xml
+++ b/mstech_mclaren/views/crm_lead.xml
@@ -23,7 +23,7 @@
         <record id="crm_lead_mstech_ge" model="ir.ui.view">
             <field name="name">crm.lead.mstech.ge</field>
             <field name="model">crm.lead</field>
-            <field name="inherit_id" ref="quick_create_opportunity_form"/>
+            <field name="inherit_id" ref="crm.quick_create_opportunity_form"/>
             <field name="arch" type="xml">
             <data>
                 <xpath expr="//field[@name='phone']" position="after">
