--- a/mstech_mclaren/views/crm_lead.xml
+++ b/mstech_mclaren/views/crm_lead.xml
@@ -4,17 +4,17 @@
         <record id="crm_lead_mstech_ga" model="ir.ui.view">
             <field name="name">crm.lead.mstech.ga</field>
             <field name="model">crm.lead</field>
-            <field name="inherit_id" ref="mstech_sixt_prev.crm_lead_view_form"/>
+            <field name="inherit_id" ref="crm.crm_lead_view_form"/>
             <field name="arch" type="xml">
             <data>
-                <xpath expr="//group[@name='alquiler_group_2_left']" position="after">
-                    <group name="rent_data_basic" string="Datos Basicos">
+                <xpath expr="//group[6]" position="after">
+                 <!--   <group name="rent_data_basic" string="Datos Basicos">  -->
                         <field name="pickup_place"/>
                         <field name="pickup_date"/>
                         <field name="devoluiton_place"/>
                         <field name="devolution_date"/>
                         <field name="type_car"/>
-                    </group>
+               <!--     </group>   -->
                 </xpath>
             </data>
             </field>
