--- a/mstech_sixt_prev/views/sale_views.xml
+++ b/mstech_sixt_prev/views/sale_views.xml
@@ -67,7 +67,7 @@
             </field>
         </record>
         
-        <record model="ir.ui.view" id="crm_lead_view_form">
+  <!--  <record model="ir.ui.view" id="crm_lead_view_form">
             <field name="name">crm.lead.form</field>
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.crm_lead_view_form"/>
@@ -88,7 +88,7 @@
                 </xpath>
             </data>
             </field>
-        </record>
+        </record>  -->
         
         <record model="ir.ui.view" id="view_order_form">
             <field name="name">sale.order.form</field>
