--- a/mstech_mclaren/views/crm_lead.xml
+++ b/mstech_mclaren/views/crm_lead.xml
@@ -11,7 +11,7 @@
                     <group name="rent_data_basic">
                         <field name="pickup_place"/>
                         <field name="pickup_date"/>
-                        <field name="devoluiton_place"/>
+                        <field name="devolution_place"/>
                         <field name="devolution_date"/>
                         <field name="type_car"/>
                     </group>
