--- a/mstech_mclaren/views/crm_lead.xml
+++ b/mstech_mclaren/views/crm_lead.xml
@@ -29,7 +29,7 @@
                 <xpath expr="//field[@name='phone']" position="after">
                     <field name="pickup_place"/>
                     <field name="pickup_date"/>
-                    <field name="devoluiton_place"/>
+                    <field name="devolution_place"/>
                     <field name="devolution_date"/>
                     <field name="type_car"/>
                 </xpath>
