--- a/mstech_mclaren/views/sale_order.xml
+++ b/mstech_mclaren/views/sale_order.xml
@@ -20,7 +20,7 @@
 			<field name="team_id"/>
 			<field name="require_signature"/>
 			<field name="require_payment"/>
-		</path>
+		</xpath>
             </data>
             </field>
         </record>
