--- a/mstech_mclaren/views/sale_order.xml
+++ b/mstech_mclaren/views/sale_order.xml
@@ -8,6 +8,7 @@
             <field name="arch" type="xml">
             <data>
                 <xpath expr="//group[@name='order_details']" position="inside">
+			<field name="process_type"/>
 			<field name="pickup_place"/>
 			<field name="pickup_date"/>
 			<field name="devolution_place"/>
